<resources>

    <string name="app_name">Sudoku</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sudoku">Android Sudoku</string>
    <string name="continue_lable">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="about_text">\ 
        Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.</string>
    <string name="title_activity_about">About</string>
    <string name="settings_label">Settings...</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="difficult_label">Difficult</string>
    <string name="new_game_title">Difficulty</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="no_moves_label">No Moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="keypad_1">1</string>   
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>   
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    

</resources>